# CS577-Machine-Learning

./: README.md  pyproject.toml
Probabilites/: photon.py
hw1_probabilities/: photon.py
hw2_naive_bayes/: naive_bayes.py
hw3_logistic_regression/: logistic_regression.py  naive_bayes.py  run_analysis.py  run_lr_penalty_experiments.py  train_utils.py  trivial_classifier.py
hw4_hypothesis_testing/: datasets.py  hypothesis_test.py
hw5_random_forest/: random_forest.py
hw6_model_selection/: exploratory_data_analysis.py  model_selection.py
hw7_support_vector_machine/: svm.py
hw7a_support_vector_machine/: svm.py
hw7b_feature_selection/: Assignment7b.py
