[tool.poetry]
name = "cs577-machine-learning"
version = "0.1.0"
description = "A repository that includes all exercises for CS577 Machine Learning Course"
authors = ["George Manos <watchmedoctor@gmail.com>"]
readme = "README.md"
packages = [{include = "hw1_probabilities"}]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.1"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
