[tool.poetry]
name = "cs577-machine-learning"
version = "0.1.0"
description = "A repository that includes all exercises for CS577 Machine Learning Course"
authors = ["George Manos <watchmedoctor@gmail.com>"]
readme = "README.md"
repository = "https://github.com/WatchmeDoc/CS577-Machine-Learning"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
pandas = "^1.5.1"
tqdm = "^4.64.1"
scikit-learn = "^1.1.3"
causal-learn = "^0.1.3.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
